front matter 형식을 yaml -> toml 로 변경함

--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="auto">
+<html lang="ko" dir="auto">
 
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +18,7 @@
 <link rel="mask-icon" href="https://dont.kr/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="https://dont.kr/404.html">
+<link rel="alternate" hreflang="ko" href="https://dont.kr/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -58,7 +58,7 @@
 </noscript><meta property="og:url" content="https://dont.kr/404.html">
   <meta property="og:site_name" content="DoNT - Do Not Think!!!">
   <meta property="og:title" content="404 Page not found">
-  <meta property="og:locale" content="en-us">
+  <meta property="og:locale" content="ko-kr">
   <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="404 Page not found">
